[package]
name = "freewili-finder-rs"
version = "0.3.1"
edition = "2024"
authors = ["David Rebbe <drebbe@intrepidcs.com>"]
description = "Rust bindings for the FreeWili Finder C/C++ library"
license = "MIT"
repository = "https://github.com/freewili/freewili-finder-rs"
keywords = ["freewili", "usb", "device", "discovery", "hardware"]
categories = ["hardware-support", "api-bindings"]

[dependencies]
thiserror = "2.0.16"

[build-dependencies]
bindgen = "0.72.0"
cmake = "0.1.54"

[[example]]
name = "list_all"
path = "examples/list_all.rs"
